--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1920, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <script type="text/javascript" src="script/jquery-3.5.1.js"></script>
+    <script type="text/javascript" src="script/script.js"></script>
 </head>
 
 <body>
     <div class="header">
+        <header>
 
+        </header>
     </div>
+    <div class="content_zone">
+        <div class="content_container">
+            <img src="img/1.jpg" class="content_image"></img>
+            <div class="content_text">
+                Кам'янець-<br>Подільський
+            </div>
+        </div>
+        <div class="content_container">
+            <img src="img/1.jpg" class="content_image"></img>
+            <div class="content_text">
+                Кам'янець-<br>Подільський
+            </div>
+        </div>
+        <div class="content_container">
+            <img src="img/1.jpg" class="content_image"></img>
+            <div class="content_text">
+                Кам'янець-<br>Подільський
+            </div>
+        </div>
+        <div class="content_container">
+            <img src="img/1.jpg" class="content_image"></img>
+            <div class="content_text">
+                Кам'янець-<br>Подільський
+            </div>
+        </div>
+        <div class="break"></div>
+    </div>
+
 </body>
 
 </html>
