--- a/index.html
+++ b/index.html
@@ -19,31 +19,12 @@
     <div class="content_zone">
         <div class="content_container">
             <img src="img/1.jpg" class="content_image"></img>
-            <div class="content_text">
-                Кам'янець-<br>Подільський
-            </div>
+            <br>
+            <div class="content--real--text">
+                <h2>Кам'янець-<br>Подільський</h2>
+                Замок був споруджений в 11-12 століттях. Основні укріплення фортеці були добудовані в 16-17 століттях. Фортеця є відмінним зразком надійної фортифікації Східної Європи. Фортеця досі приймає відвідувачів. </div>
         </div>
-        <div class="content_container">
-            <img src="img/1.jpg" class="content_image"></img>
-            <div class="content_text">
-                Кам'янець-<br>Подільський
-            </div>
-        </div>
-        <div class="content_container">
-            <img src="img/1.jpg" class="content_image"></img>
-            <div class="content_text">
-                Кам'янець-<br>Подільський
-            </div>
-        </div>
-        <div class="content_container">
-            <img src="img/1.jpg" class="content_image"></img>
-            <div class="content_text">
-                Кам'янець-<br>Подільський
-            </div>
-        </div>
-        <div class="break"></div>
     </div>
-
 </body>
 
 </html>
