--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
     <meta name="viewport" content="width=1920, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <script type="text/javascript" src="script/jquery-3.5.1.js"></script>
-    <script type="text/javascript" src="script/script.js"></script>
 </head>
 
 <body>
     <div class="header">
         <header>
-
+            <div class="link--space">
+                <a class="header--link" href="index.html">Замки</a>
+                <a class="header--link" href="palaci.html">паласы</a>
+                <a class="header--link" href="diva.html">Пшел нах</a>
+            </div>
         </header>
     </div>
-    <div class="content_zone">
-        <div class="content_container">
-            <img src="img/1.jpg" class="content_image"></img>
-            <br>
-            <div class="content--real--text">
-                <h2>Кам'янець-<br>Подільський</h2>
-                Замок був споруджений в 11-12 століттях. Основні укріплення фортеці були добудовані в 16-17 століттях. Фортеця є відмінним зразком надійної фортифікації Східної Європи. Фортеця досі приймає відвідувачів. </div>
-        </div>
-    </div>
+    <div class="cards-wrapper"></div>
+
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
