--- a/palaci.html
+++ b/palaci.html
@@ -12,9 +12,9 @@
     <div class="header">
         <header>
             <div class="link--space">
-                <a class="header--link" href="index.html">Замки</a>
-                <a class="header--link" href="palaci.html">паласы</a>
-                <a class="header--link" href="diva.html">Пшел нах</a>
+                <a class="header--link" href="zamki.html">Замки</a>
+                <a class="header--link" href="palaci.html">Палаци</a>
+                <a class="header--link" href="diva.html">Дива природи</a>
             </div>
         </header>
     </div>
