--- a/index.html
+++ b/index.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
+
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=1920, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css">
-</head>
-
-<body>
-    <div class="header">
-        <header>
-            <div class="link--space">
-                <a class="header--link" href="index.html">Замки</a>
-                <a class="header--link" href="palaci.html">паласы</a>
-                <a class="header--link" href="diva.html">Пшел нах</a>
-            </div>
-        </header>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style/index.css">
+    </head>
+    <body>
+        <h1 class="out">Історичні міста України</h1>
+        <div class="down">
+        <a href="zamki.html">
+            До інформації
+        </a>
     </div>
-    <div class="cards-wrapper"></div>
-
-    <script type="text/javascript" src="script/script.js"></script>
-</body>
-
-</html>
+    </body>
+    </html>
