--- a/zamki.html
+++ b/zamki.html
@@ -20,7 +20,7 @@
     </div>
     <div class="cards-wrapper"></div>
 
-    <script type="text/javascript" src="script/script2.js"></script>
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
